# FolderCleaner

./: Cleaner.py  LICENSE  README.md  file_group.py  folder_handler.py  helpers.py  pyproject.toml  requirements.txt  trash_handler.py
.github/workflows/: ci.yaml
folder_cleaner/: Cleaner.py  file_group.py  folder_handler.py  helpers.py  trash_handler.py
tests/: test_Cleaner.py  test_file_group.py  test_folder_handler.py  test_helpers.py  test_trash_handler.py
