[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "FolderCleaner"
version = "0.1.0"
description = "A simple automation script to help organize folders"
authors = ["Cykie Productions <cykiestudios@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.4"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"